--- a/admin/css/sb-admin-2.css
+++ b/admin/css/sb-admin-2.css
@@ -64,7 +64,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #858796;
+  color: #000;
   text-align: left;
   background-color: #fff;
 }
@@ -1492,16 +1492,16 @@ pre code {
 .table td {
   padding: 0.75rem;
   vertical-align: top;
-  border-top: 1px solid #e3e6f0;
+  border-top: 1px solid #ffffff;
 }
 
 .table thead th {
   vertical-align: bottom;
-  border-bottom: 2px solid #e3e6f0;
+  border-bottom: 2px solid #ffffff;
 }
 
 .table tbody + tbody {
-  border-top: 2px solid #e3e6f0;
+  border-top: 2px solid #ffffff;
 }
 
 .table-sm th,
@@ -1510,7 +1510,7 @@ pre code {
 }
 
 .table-bordered {
-  border: 1px solid #e3e6f0;
+  border: 1px solid #ffffff;
 }
 
 .table-bordered th,
