--- a/admin/css/sb-admin-2.css
+++ b/admin/css/sb-admin-2.css
@@ -1542,14 +1542,14 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #cdd8f6;
+  background-color: #000000;
 }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #a3b6ee;
+  border-color: #000000;
 }
 
 .table-hover .table-primary:hover {
@@ -1558,7 +1558,7 @@ pre code {
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #b7c7f2;
+  background-color: #000000;
 }
 
 .table-secondary,
