--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #3498db;
+  background: #198754;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -173,7 +173,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #3498db;
+  color: #37db34;
 }
 
 .navbar .dropdown ul {
@@ -487,7 +487,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #3498db;
+  background: #198754;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -520,7 +520,7 @@ section {
 }
 
 .what-we-do .icon-box .icon i {
-  color: #3498db;
+  color: #198754;
   font-size: 28px;
 }
 
@@ -548,7 +548,7 @@ section {
 
 .what-we-do .icon-box:hover h4 a,
 .what-we-do .icon-box:hover .icon i {
-  color: #3498db;
+  color: #37db34;
 }
 
 /*--------------------------------------------------------------
@@ -583,7 +583,7 @@ section {
   left: 0;
   top: 0;
   font-size: 22px;
-  color: #3498db;
+  color: #37db34;
 }
 
 .about .icon-boxes {
@@ -763,7 +763,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  background: #3498db;
+  background: #198754;
   color: #fff;
 }
 
@@ -1096,7 +1096,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #3498db;
+  color: #198754;
   float: left;
   width: 44px;
   height: 44px;
@@ -1124,7 +1124,7 @@ section {
 }
 
 .contact .info:hover i {
-  background: #3498db;
+  background: #37db34;
   color: #fff;
 }
 
