--- a/login/css/style.css
+++ b/login/css/style.css
@@ -107,11 +107,13 @@ h2 {
   background: #ccc; }
 
 .control input:checked ~ .control__indicator {
-  background: #fb771a; }
+  background: #28a745;
+}
 
 .control:hover input:not([disabled]):checked ~ .control__indicator,
 .control input:checked:focus ~ .control__indicator {
-  background: #fb8633; }
+  background: #28a745;
+}
 
 .control input:disabled ~ .control__indicator {
   background: #e6e6e6;
